--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,7 @@ input[type="radio"].visually-hidden {
 
 /*  ----  catalog  ----  */
 
-.page-basket {
+.order-active {
     background-color: #ee3643;
 }
 
@@ -599,10 +599,6 @@ input[type="radio"].visually-hidden {
     vertical-align: middle;
     
     color: #ffffff;
-}
-
-.site-navigation li:nth-child(1) {
-    
 }
 
 .site-navigation a:hover {
@@ -1297,6 +1293,36 @@ input[type="radio"].visually-hidden {
     user-select: none;
 }
 
+/*.filter-input-checkbox + label::before {
+    content: "";
+    
+    position: absolute;
+    left: -34px;
+    top: -2px;
+
+    width: 23px;
+    height: 23px;
+
+    background-image: url("../img/svg/checkbox-off.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+}
+
+.filter-input-checkbox:checked + label::after {
+    content: "";
+    
+    position: absolute;
+    left: -34px;
+    top: -2px;
+    
+    width: 27px;    
+    height: 23px;
+    
+    background-image: url("../img/svg/checkbox-on.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+}*/
+
 .checkbox {
     width: 27px;
     height: 23px;
@@ -1809,7 +1835,7 @@ input[type="radio"].visually-hidden {
     text-align: center;
 }
 
-.brand-list li:nth-child(4n) a {
+.brand-list__element:nth-child(4n) a {
     margin-right: 0;
 }
 
@@ -2145,6 +2171,8 @@ input[type="radio"].visually-hidden {
     
     border: none;
     border-radius: 3px;
+    
+    cursor: pointer;
 }
 
 /*  ----  catalog  ----  */
@@ -2542,6 +2570,8 @@ input[type="radio"].visually-hidden {
     border: 0;
     
     cursor: pointer;
+    
+    z-index: 1;
 }
 
 .modal-close::before,
@@ -2692,4 +2722,70 @@ input[type="radio"].visually-hidden {
     margin-left: 20px;
     background-color: #ffffff;
     color: #000000;
+}
+
+.modal-show {
+    display: block;
+    
+    animation: bounce 0.6s;
+}
+
+.modal-error {
+  animation: shake 0.6s;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
+
+.modal-map p {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+  margin: 0;
+}
+
+.modal-map iframe {
+  position: relative;
+  z-index: 2;
+
+  border: none;
 }
