--- a/css/style.css
+++ b/css/style.css
@@ -2219,8 +2219,9 @@ input[type="radio"].visually-hidden {
         flex-wrap: wrap;    
     
     margin: 0;
+    margin-top: 32px;
     padding: 0;
-    
+
     list-style: none;
 }
 
